[package]
name = "smtp2http"
version = "0.1.0"
edition = "2021"

[dependencies]
lettre = "0.11.2"
mail-parser = { version = "0.9.2", features = ["serde_support"] }
mailin = "0.6.3"
mailin-embedded = "0.8.1"
reqwest = { version = "0.11.22", features = ["json", "blocking", "rustls-tls"] }
serde = "1.0.193"
serde_json = "1.0.108"
structopt = "0.3.26"
tokio = { version = "1.35.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
